@@ -1,5 +1,6 @@
 2010-11-03  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16191: Optimize stdWrap usage for TypoScript content element CONTENT (Thanks to Jo Hasenau)
 	* Fixed bug #16196: Optimize stdWrap usage for TypoScript content element CTABLE (Thanks to Jo Hasenau)
 	* Fixed bug #16197: Optimize stdWrap usage for TypoScript content element FILE (Thanks to Jo Hasenau)
 	* Fixed bug #16199: Optimize stdWrap usage for TypoScript content element HMENU (Thanks to Jo Hasenau)
